--- a/game.project
+++ b/game.project
@@ -2,6 +2,7 @@
 title = Human Trials
 dependencies = https://github.com/britzl/defold-orthographic/archive/master.zip
 version = 0.1
+write_log = 0
 
 [bootstrap]
 main_collection = /scenes/test.collectionc
@@ -29,8 +30,11 @@ input_method = HiddenInputField
 package = com.selimanac.humantrials
 
 [physics]
-gravity_y = -1000.0
-scale = 0.01
+gravity_y = 0.0
+debug = 0
+ray_cast_limit_3d = 0
+world_count = 1
+max_collisions = 16
 
 [graphics]
 default_texture_min_filter = nearest
